<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_progress"
            android:title="@string/progress" />
        
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>
    
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications" />
            
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>
    </item>
    
</menu>
